# nlu-trading-indicator

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  README.md  REFACTORING_TODO.md  ROC_MOMENTUM_COMPACT_PRINT.py  ema_ribbon.py  ema_ribbon_integration.py  pyproject.toml  requirements-dev.txt  requirements.txt  roc_momentum.py  roc_momentum_integration.py  supertrend_filter.py  supertrend_integration.py  trend_strength.py  trend_strength_integration.py  vwap_engine.py  vwap_integration.py  vwap_state_machine.py
.github/workflows/: ci.yml
docs/indicator_engines/: EMA_RIBBON_README.md  README.md  ROC_MOMENTUM_README.md  ROC_MOMENTUM_SUMMARY.md  SUPERTREND_README.md  TREND_STRENGTH_INTEGRATION_SNIPPET.md  TREND_STRENGTH_README.md  VWAP_README.md  VWAP_STATE_MACHINE_INTEGRATION.md
indicator/: ARCHITECTURE.md  __init__.py  analyze.py  atr_expansion.py  atr_expansion_integration.py  best_pair_selector.py  bollinger_bandwidth.py  bollinger_bandwidth_integration.py  breakout_validation.py  calculations.py  choppiness.py  choppiness_integration.py  continuous_runner.py  data_fetcher.py  demo_atr_expansion.py  ema_filter.py  example_best_pair.py  example_ema_filter.py  example_institutional_structure.py  example_market_structure.py  funding_analysis.py  indicator_config.py  indicators.py  institutional_structure.py  logging_config.py  macd_histogram.py  macd_histogram_integration.py  market_structure.py  oi_analysis.py  orderbook_analysis.py  precise_volume_delta.py  rsi_timing.py  rsi_timing_integration.py  runner.py  signals.py  stoch_rsi_timing.py  timing_rules.py  timing_rules_integration.py  unified_score.py  volume_analysis.py  (+1 more)
indicator/apps/: __init__.py  analyze.py  continuous_runner.py  runner.py
indicator/continuous/: __init__.py  atr_expansion_adapter.py  data_types.py  engine_adapters.py  ingestion.py  market_structure_adapter.py  metrics.py  orchestrator.py  ring_buffer.py  rolling_window.py  state_machine.py
indicator/display/: __init__.py  colors.py  formatters.py  printers.py  structure_display.py
indicator/docs/: ANALYSIS_AND_RECOMMENDATIONS.md  ATR_EXPANSION_QUICK_REF.md  ATR_EXPANSION_README.md  ATR_EXPANSION_SUMMARY.md  ATR_INTEGRATION_COMPLETE.md  BEST_PAIR_QUICK_START.md  BEST_PAIR_SELECTOR_README.md  BEST_PAIR_SELECTOR_SUMMARY.md  CHOPPINESS_QUICK_REF.md  CHOPPINESS_README.md  CHOPPINESS_SUMMARY.md  DEEP_DIVE_MODE.md  EMA_INTEGRATION.md  INTEGRATION_SNIPPET.md  MARKET_STRUCTURE.md  README.md  STRUCTURE_COMPARISON.md
indicator/engines/: __init__.py  atr_expansion.py  best_pair_selector.py  bollinger_bandwidth.py  breakout_validation.py  calculations.py  choppiness.py  data_fetcher.py  ema_filter.py  funding_analysis.py  indicator_config.py  indicators.py  institutional_structure.py  macd_histogram.py  market_structure.py  oi_analysis.py  orderbook_analysis.py  precise_volume_delta.py  rsi_timing.py  signals.py  stoch_rsi_timing.py  timing_rules.py  unified_score.py  volume_analysis.py  volume_engine.py
indicator/examples/: __init__.py  demo_atr_expansion.py  example_best_pair.py  example_ema_filter.py  example_institutional_structure.py  example_market_structure.py
indicator/integrations/: __init__.py  atr_expansion_integration.py  bollinger_bandwidth_integration.py  choppiness_integration.py  macd_histogram_integration.py  rsi_timing_integration.py  timing_rules_integration.py
indicator/tests/: conftest.py  test_atr_expansion.py  test_bollinger_bandwidth.py  test_choppiness.py  test_ema_filter.py  test_indicators.py  test_institutional_structure.py  test_macd_histogram.py  test_rsi_timing.py  test_stoch_rsi_timing.py  test_timing_rules.py  test_unified_score.py  test_volume_engine.py
indicator/utils/: __init__.py  retry.py
nlu_analyzer/: __init__.py
nlu_analyzer/indicators/: __init__.py  ema_ribbon.py  roc_momentum.py  supertrend_filter.py  trend_strength.py  vwap_engine.py  vwap_state_machine.py
nlu_analyzer/integrations/: __init__.py  ema_ribbon_integration.py  roc_momentum_integration.py  (+3 more)
tests/: test_ema_ribbon.py  test_indicators.py  test_retry.py  test_roc_momentum.py  test_supertrend_filter.py  test_trend_strength.py  test_vwap_engine.py  test_vwap_state_machine.py
(+2 files in other folders)
